fixing font readability

--- a/css/layout.css
+++ b/css/layout.css
@@ -62,14 +62,15 @@ header .banner-text h1 {
    color: #fff;
    letter-spacing: -2px;
    margin: 0 auto 18px auto;
+   /*text-shadow: -1px 0 black, 0 3px black, 1px 0 black, 0 -3px black;*/
    text-shadow: 0px 1px 3px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 {
-   font: 18px/1.9em 'librebaskerville-regular', serif;
-   color: #A8A8A8;
+   font: 20px/1.9em 'librebaskerville-regular', sans-serif;
+   color: #fff;
    margin: 0 auto;
    width: 70%;
-   text-shadow: 0px 1px 2px rgba(0, 0, 0, .5);
+   text-shadow: 0px 1px 5px rgba(0, 0, 0, .8);
 }
 header .banner-text h3 span,
 header .banner-text h3 a {
@@ -84,18 +85,18 @@ header .banner-text hr {
 
 /* header social links */
 header .social {
-   margin: 24px 0;
+   margin: 26px 0;
    padding: 0;
    font-size: 30px;
-   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
+   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0);
 }
 header .social li {
    display: inline-block;
-   margin: 0 15px;
+   margin: 0 20px;
    padding: 0;
 }
-header .social li a { color: #fff; }
-header .social li a:hover { color: #11ABB0; }
+header .social li a { color: #FFFFFF; }
+header .social li a:hover { color: #110; }
 
 /* scrolldown link */
 header .scrolldown a {
@@ -117,7 +118,7 @@ header .scrolldown a {
    -o-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
 }
-header .scrolldown a:hover { color: #11ABB0; }
+header .scrolldown a:hover { color: #110; }
 
 /* primary navigation
 --------------------------------------------------------------------- */
